[#83889] Added tests / code cleanup