@@ -4,9 +4,9 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 import jakarta.validation.Validation;
 import jakarta.validation.Validator;
+import jakarta.validation.ValidatorFactory;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.lang.reflect.InvocationTargetException;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collections;
@@ -17,7 +17,6 @@ import java.util.function.Consumer;
 import java.util.stream.IntStream;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
-import nu.ndw.nls.accessibilitymap.backend.yaml.exception.InvalidDataClassException;
 import nu.ndw.nls.accessibilitymap.backend.yaml.exception.InvalidDataException;
 import org.springframework.core.env.Environment;
 import org.springframework.util.ResourceUtils;
@@ -42,11 +41,11 @@ public abstract class AbstractYamlRepository<T extends List<?>> {
             String yamlFile,
             Consumer<T> preValidateCallback) throws IOException {
 
-        var objectMapper = new ObjectMapper(new YAMLFactory());
+        ObjectMapper objectMapper = new ObjectMapper(new YAMLFactory());
         objectMapper.findAndRegisterModules();
 
-        log.debug("{} started Loading data.", this.getClass().getSimpleName());
-        var yamlFileContent = getYamlFile(yamlFile, environment);
+        log.debug("{} started Loading data from.", this.getClass().getSimpleName());
+        String yamlFileContent = getYamlFile(yamlFile, environment);
         if (StringUtils.hasText(yamlFileContent)) {
             data = objectMapper.readValue(
                     yamlFileContent,
@@ -54,27 +53,21 @@ public abstract class AbstractYamlRepository<T extends List<?>> {
 
             preValidateCallback.accept(data);
             validateData();
+            log.debug("{} data loaded successfully with {} items.", this.getClass().getSimpleName(), data.size());
         } else {
-            log.debug("No data available.");
-            try {
-                data = dataClass.getDeclaredConstructor().newInstance();
-            } catch (InstantiationException | IllegalAccessException | InvocationTargetException |
-                     NoSuchMethodException e) {
-                log.error("Couldn't create instance of class {}", dataClass.getSimpleName(), e);
-                throw new InvalidDataClassException(String.format("Could not create instance of class %s.", dataClass.getSimpleName()));
-            }
+            throw new InvalidDataException(List.of("No data is available for `%s` because it is empty".formatted(yamlFile)));
         }
-        log.debug("{} data loaded successfully with {} items.", this.getClass().getSimpleName(), data.size());
     }
 
     private void validateData() {
 
-        try (var factory = Validation.buildDefaultValidatorFactory()) {
-            var validator = factory.getValidator();
+        try (ValidatorFactory factory = Validation.buildDefaultValidatorFactory()) {
+            Validator validator = factory.getValidator();
 
-            var errors = IntStream.range(0, data.size())
+            List<String> errors = IntStream.range(0, data.size())
                     .mapToObj(index -> getErrorMessage(validator, data, index))
                     .filter(Objects::nonNull)
+                    .map(String::trim)
                     .toList();
 
             if (!errors.isEmpty()) {
@@ -89,7 +82,7 @@ public abstract class AbstractYamlRepository<T extends List<?>> {
 
         var validationErrors = validator.validate(object.get(index));
         if (!validationErrors.isEmpty()) {
-            return String.format("%s data record nr %s is invalid because: %s",
+            return "%s data record nr %s is invalid because: %s".formatted(
                     this.getClass().getSimpleName(),
                     index,
                     validationErrors.stream()
@@ -102,32 +95,34 @@ public abstract class AbstractYamlRepository<T extends List<?>> {
 
     private String getYamlFile(String fileName, Environment environment) throws FileNotFoundException {
 
-        var activeProfiles = Arrays.asList(environment.getActiveProfiles());
+        List<String> activeProfiles = Arrays.asList(environment.getActiveProfiles());
         Collections.reverse(activeProfiles);
 
+        Optional<String> fileContent;
         for (String activeProfile : activeProfiles) {
-            var file = readFile(String.format("%s-%s", fileName, activeProfile));
-            if (file.isPresent()) {
-                return file.get();
+            fileContent = readFile("%s-%s".formatted(fileName, activeProfile));
+            if (fileContent.isPresent()) {
+                return fileContent.get();
             }
         }
 
-        var file = readFile(fileName);
-        if (file.isPresent()) {
-            return file.get();
+        fileContent = readFile(fileName);
+        if (fileContent.isPresent()) {
+            return fileContent.get();
         }
 
-        throw new FileNotFoundException(String.format("Could not load data file for %s", this.getClass().getSimpleName()));
+        throw new FileNotFoundException("Could not load data file for %s".formatted(this.getClass().getSimpleName()));
     }
 
     private Optional<String> readFile(String fileName) {
 
-        try (var inputStream = ResourceUtils.getURL(String.format("classpath:data/%s.yml", fileName)).openStream()) {
-            var yaml = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+        try (var inputStream = ResourceUtils.getURL("classpath:data/%s.yml".formatted(fileName)).openStream()) {
+            String fileContent = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
             log.debug("Successfully loaded data from file: '{}'.", fileName);
-            return Optional.of(yaml);
-        } catch (IOException e) {
-            log.debug("Failed to load data from file: '{}'.", fileName, e);
+
+            return Optional.of(fileContent);
+        } catch (IOException exception) {
+            log.debug("Failed to load data from file: '{}'.", fileName, exception);
             return Optional.empty();
         }
     }
